--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -7,6 +7,7 @@
     "src/preload/*.d.ts"
 , "src/main/lib/pdf.ts"  ],
   "compilerOptions": {
+    "noImplicitReturns": false,
     "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
