--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-updater": "^6.3.9",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.523.0",
     "pdf2json": "^3.1.6",
     "pdfjs-dist": "^5.3.31",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.4"
+    "tw-animate-css": "^1.3.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
