--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imuprofene",
-  "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "version": "1.1.0",
+  "description": "Calculate IMU like a PRO",
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
